2015-01-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #64543: Extension does not handle vendorName
	* Resolves #64525 (Follow-up): Extbase does not find the templates of backend Font Maker in TYPO3 7.0

2015-01-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #64517: CaptchaValidator::isValid should be protected
	* Resolves #64519: Validate annotation: class name TtfFileValidator should not start with backslash
	* Resolves #64520: Extract module configuration from static template
	* Resolves #64524: SJBR\SrFreecap\Domain\Model\Font raises warning on PHP 5.4+
	* Resolves #64525: Extbase does not find the templates of backend Font Maker in TYPO3 7.0

2014-09-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #61756: Storing session data prevents correct handling of session data in other extensions (Thanks to Daniel Minder)
	* Update version to 2.0.10

2014-08-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 2.0.9

2014-07-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Correction to Spanish localization file
	* Resolves #60536: Mallformed Last-Modified header (Thanks to Christian Ludwig)

2014-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Correction to default css styles

2014-04-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Localization of audio captcha may fail for lack of available TCA of pages_language_overlay

2014-04-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #57543: French text in Italian language file

2014-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Cleanup calls to deprecated methods

2014-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56045: Add random variable in captcha image src
	* Update version to 2.0.8

2014-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Enable in TYPO3 6.2
	* Update version to 2.0.7

2014-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #55777: Object manager exceptions raised in TYPO3 6.2	

2013-11-26  Stanislas Rolland  <typo3@sjbr.ca>
