@@ -2,6 +2,7 @@
 
 	* Resolves #64543: Extension does not handle vendorName
 	* Resolves #64525 (Follow-up): Extbase does not find the templates of backend Font Maker in TYPO3 7.0
+	* Resolves #64548: Font file not found in Font Maker on PHP 5.5
 
 2015-01-26  Stanislas Rolland  <typo3@sjbr.ca>
 
